common-applications/test-environment/cve-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cve-manager-service
  namespace: cve-manager
spec:
  ports:
  - name: cve-manager
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: cve-manager
  type: ClusterIP
