common-applications/test-environment/cve-manager/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx   
  name: cve-manager-ingress
  namespace: cve-manager
spec:
  tls:
    - hosts:
        - cvemanager.test.osinfra.cn
      secretName: cve-manager-tls
  rules:
    - host: cvemanager.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: cve-manager-service
              servicePort: 80
            path: /
